--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -138,48 +138,48 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jsv2bx" target="_blank">Zendaya<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jsv2bx" target="_blank">Zendaya<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jsv2bx" target="_blank">Maggie Grace<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jsv2dm" target="_blank">Stacy Keibler<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jsv2dm" target="_blank">Stacy Keibler<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jsv2dm" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jsv2f9" target="_blank">Keri Russell<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jsv2f9" target="_blank">Keri Russell<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jsv2f9" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jsv2gv" target="_blank">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jsv2gv" target="_blank">Jennifer Lawrence<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jsv2gv" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Lily Collins<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzcz" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzcz" target="_blank">Lily Collins<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Daisy Ridley<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzek" target="_blank">Daisy Ridley<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzek" target="_blank">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzgf" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzgf" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Michelle Keegan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzit" target="_blank">Michelle Keegan<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jumzit" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
                  </ul>  
              </div>
              <!-- END ROUND TWO -->
              <div class="round round-three current">
                 <div class="round-details">Round 3<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Maggie Grace<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
