--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -174,20 +174,20 @@
              <div class="round round-three current">
                 <div class="round-details">Round 3A<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0txp4" target="_blank">Maggie Grace<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0txp4" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u4c3" target="_blank">Maggie Grace<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u4c3" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0txfw" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0txfw   " target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u45a" target="_blank">Emma Stone<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u45a" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">s
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0tx01" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0tx01" target="_blank">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u3zh" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u3zh" target="_blank">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0txk9" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k0txk9" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u494" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k0u494" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND THREE -->
